tests/frontend_tests/error_missing_final_brace.c
int main() {
  // error: expected '}' after ';'
  return 10;
